
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef size_t v ;
typedef int uint8_t ;
typedef int uint32_t ;
typedef int lua_State ;


 int SMALL_CHUNK ;
 scalar_t__ luaL_checklstring (int *,int,size_t*) ;
 char* lua_newuserdata (int *,int) ;
 int lua_pushlstring (int *,char*,int) ;

__attribute__((used)) static int
lb64encode(lua_State *L) {
 static const char* encoding = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
 size_t sz = 0;
 const uint8_t * text = (const uint8_t *)luaL_checklstring(L, 1, &sz);
 int encode_sz = (sz + 2)/3*4;
 char tmp[SMALL_CHUNK];
 char *buffer = tmp;
 if (encode_sz > SMALL_CHUNK) {
  buffer = lua_newuserdata(L, encode_sz);
 }
 int i,j;
 j=0;
 for (i=0;i<(int)sz-2;i+=3) {
  uint32_t v = text[i] << 16 | text[i+1] << 8 | text[i+2];
  buffer[j] = encoding[v >> 18];
  buffer[j+1] = encoding[(v >> 12) & 0x3f];
  buffer[j+2] = encoding[(v >> 6) & 0x3f];
  buffer[j+3] = encoding[(v) & 0x3f];
  j+=4;
 }
 int padding = sz-i;
 uint32_t v;
 switch(padding) {
 case 1 :
  v = text[i];
  buffer[j] = encoding[v >> 2];
  buffer[j+1] = encoding[(v & 3) << 4];
  buffer[j+2] = '=';
  buffer[j+3] = '=';
  break;
 case 2 :
  v = text[i] << 8 | text[i+1];
  buffer[j] = encoding[v >> 10];
  buffer[j+1] = encoding[(v >> 4) & 0x3f];
  buffer[j+2] = encoding[(v & 0xf) << 2];
  buffer[j+3] = '=';
  break;
 }
 lua_pushlstring(L, buffer, encode_sz);
 return 1;
}
